tests/gateway-api-migration/fixtures/standalone-server-snippet/expected/common.gateway/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: common-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: demo-https
      port: 443
      protocol: HTTPS
      hostname: demo.example.com
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: demo-tls
