tests/gateway-api-migration/fixtures/standalone-server-snippet/expected/common.gateway/base/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: default
resources:
  - gateway.yaml
  - httproute.yaml
